// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Notification Banner Notifiction 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 1024,
      }
    }
  >
    <div
      className="css-yehuvi-BannersContainer"
    >
      <div
        className="css-6t1vuy-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1avnyjk-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-6t1vuy-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1avnyjk-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-6t1vuy-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1avnyjk-Icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Inline Notifiction 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          />
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-172bta1-CompactNotification"
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
            <span
              className="css-xvugv-CompactNotification"
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1avnyjk-Icon"
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-172bta1-CompactNotification"
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-xvugv-CompactNotification"
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1avnyjk-Icon"
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground Notifiction 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      className="css-6t1vuy-CompactNotification"
    >
      <div
        className="css-1qxbj8g-CompactNotification"
      >
        <div
          className="css-61cpcu-CompactNotification"
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-1atsk5c-Icon"
            />
          </span>
        </div>
        <div>
          This is the info
        </div>
      </div>
      <div
        className="css-1xih1b5-CompactNotification"
      >
        <span
          className="css-172bta1-CompactNotification"
          data-testid="notification-primary"
          onClick={[Function]}
        >
          Action
        </span>
        <span
          className="css-xvugv-CompactNotification"
          data-testid="notification-close"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-1avnyjk-Icon"
            />
          </span>
        </span>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;
